# ai-400

./: README.md
task-management-api-app/: .env.example  .gitignore  LEARNING_NOTES.md  README.md  SESSION_SUMMARY.md  pyproject.toml
task-management-api-app/app/: __init__.py  config.py  database.py  main.py
task-management-api-app/app/crud/: __init__.py  task.py
task-management-api-app/app/models/: __init__.py  task.py
task-management-api-app/app/routers/: __init__.py  tasks.py
task-management-api-app/app/schemas/: __init__.py  task.py
task-management-api-app/tests/: __init__.py  conftest.py  test_tasks.py
